--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "cd frontend && npm install && npm run build",
-    "heroku-postbuild": "cd frontend && npm install && npm run build && cd .. && python ecom/manage.py collectstatic --noinput"
+    "heroku-postbuild": "cd frontend && npm install && npm run build && cd .. && python ecom/manage.py collectstatic --noinput",
+    "render-build": "pip install -r requirements.txt && cd frontend && npm install && npm run build && cd ../ecom && python manage.py collectstatic --noinput"
   },
   "repository": {
     "type": "git",
