--- a/render.yaml
+++ b/render.yaml
@@ -1,16 +1,11 @@
-services:
-  - type: web
-    name: fractal-ecommerce
-    env: python
-    buildCommand: pip install -r requirements.txt && cd frontend && npm install && npm run build && cd ../ecom && python manage.py collectstatic --noinput
-    startCommand: cd ecom && gunicorn ecom.wsgi:application
-    envVars:
-      - key: DJANGO_SETTINGS_MODULE
-        value: ecom.production_settings
-      - key: DEBUG
-        value: False
-
-databases:
-  - name: fractal-postgres
-    databaseName: fractal_ecommerce
-    user: fractal_user
+envVars:
+     - key: SECRET_KEY
+       generateValue: true
+     - key: DJANGO_SETTINGS_MODULE
+       value: ecom.production_settings
+     - key: DEBUG
+       value: False
+     - key: DATABASE_URL
+       fromDatabase:
+         name: fractal-postgres
+         property: connectionString
